<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/subtitulo_home"
            android:textSize="24dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_onSecondary"
            android:gravity="center"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvDespesas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <TextView
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:paddingTop="24dp"
            android:text="@string/total_expense"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/total_person"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_pessoa_pagante"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="16dp" />

            <Button
                android:id="@+id/btn_dividir"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_secondary"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/texto_botao_dividirr"
                android:textAllCaps="false"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/total_per_paid"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotalDividido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="14sp" />


    </LinearLayout>
</LinearLayout>